objects/lightsideapps__LightsideSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores Settings for the Lightside Power Tools App</description>
    <fields>
        <fullName>lightsideapps__Auto_Appoval_Interval_Minutes__c</fullName>
        <inlineHelpText>How often should the Auto Approval Schedule run</inlineHelpText>
        <label>Auto Appoval Interval (Minutes)</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lightsideapps__ClearScriptScheduleFields__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected the Script Schedule fields (including credentials) will be cleared upon the final schedule run</inlineHelpText>
        <label>Clear Script Schedule Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lightsideapps__DefaultQTYScheduleEnabledToTrue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting this to True will default the &apos;Enable Quantity Schedule&apos; field on the ProductCreatorPage to be True for NEW Products</description>
        <inlineHelpText>Setting this to True will default the &apos;Enable Quantity Schedule&apos; field on the ProductCreatorPage to be True for NEW Products</inlineHelpText>
        <label>DefaultQTYScheduleEnabledToTrue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lightsideapps__DefaultRevScheduleEnabledToTrue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting this to True will default the &apos;Enable Revenue Schedule&apos; field on the ProductCreatorPage to be True for NEW Products</description>
        <inlineHelpText>Setting this to True will default the &apos;Enable Revenue Schedule&apos; field on the ProductCreatorPage to be True for NEW Products</inlineHelpText>
        <label>DefaultRevScheduleEnabledToTrue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Delegate_Approver_Message__c</fullName>
        <description>Allows a message (or instructions) for Delegate Approvers to be shown on the &apos;My Approvals&apos; page</description>
        <inlineHelpText>Allows a message (or instructions) for Delegate Approvers to be shown on the &apos;My Approvals&apos; page</inlineHelpText>
        <label>Delegate Approver Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Delegation_Interval__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Delegation Interval (Minutes)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Delete_All_Group_Tasks_on_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Group Task Sync. 
If set to True the all the Synced Tasks will be deleted if any of the synced tasks are deleted. 
If set to False (default value) only the task deleted will be removed, with the rest of the Group Tasks remaining.</description>
        <inlineHelpText>For Group Task Sync. 
If set to True the all the Synced Tasks will be deleted if any of the synced tasks are deleted. 
If set to False (default value) only the task deleted will be removed, with the rest of the Group Tasks remaining.</inlineHelpText>
        <label>Delete All Group Tasks on Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Delete_Duplicate_Closed_Group_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Synced Group Tasks. 
If set to true, then only the Task Closed will be kept and the other group tasks deleted. 
If set to False (default), all group tasks will remain and be synced.</description>
        <inlineHelpText>For Synced Group Tasks. 
If set to true, then only the Task Closed will be kept and the other group tasks deleted. 
If set to False (default), all group tasks will remain and be synced.</inlineHelpText>
        <label>Delete Duplicate Closed Group Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Deployment_Poll_Interval_Minutes__c</fullName>
        <inlineHelpText>How often should the Deployment Polling Schedule run</inlineHelpText>
        <label>Deployment Poll Interval (Minutes)</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Email_Attachment_Task_RecordType__c</fullName>
        <description>The Id of the Task Record Type to use for Tasks created via the Email Attachment Tool. If this is left blank or the user does not have access to this Record Type, the Task Record Type will be the users default Task Record Type.</description>
        <inlineHelpText>The Id of the Task Record Type to use for Tasks created via the Email Attachment Tool. If this is left blank or the user does not have access to this Record Type, the Task Record Type will be the users default Task Record Type.</inlineHelpText>
        <label>Email Attachment Task RecordType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Force_Activity_on_Attachment_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Forces the creation of an Activity on all emails sent via the File and Attachment Email Tool and removes the &apos;Create Activity.&apos; checkbox as an option. Note: The Object must be setup to allow Activities and the user have permissions to create Activities.</description>
        <inlineHelpText>Forces the creation of an Activity on all emails sent via the File and Attachment Email Tool and removes the &apos;Create Activity.&apos; checkbox as an option. Note: The Object must be setup to allow Activities and the user have permissions to create Activities.</inlineHelpText>
        <label>Force Activity on Attachment Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Save_Deployments_as_Files__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If unchecked Deployments will be saved as Attachments.</inlineHelpText>
        <label>Save Deployments as Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lightsideapps__ShowActivePricebooksOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine whether to show both Active and Inactive Pricebooks on the ProductCreator page or only Active.</description>
        <inlineHelpText>Used to determine whether to show both Active and Inactive Pricebooks on the ProductCreator page or only Active.</inlineHelpText>
        <label>ShowActivePricebooksOnly</label>
        <type>Checkbox</type>
    </fields>
    <label>LightsideSettings</label>
</CustomObject>